--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-konva": "^18.2.10",
         "tailwindcss": "^3.3.2",
         "typescript": "^5.0.2",
+        "use-resize-observer": "^9.1.0",
         "vite": "^4.4.0"
     }
 }
